[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/release.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/main.tres" type="DynamicFont" id=2]

[node name="release" type="Node" index="0"]

script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 0.458824, 0.627451, 1 )

[node name="petSprite" type="Sprite" parent="." index="1"]

position = Vector2( 140, 124 )
_sections_unfolded = [ "Transform" ]

[node name="canvas" type="CanvasLayer" parent="." index="2"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="agelabel" type="Label" parent="canvas" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 14.0
rect_min_size = Vector2( 160, 16 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[node name="gradeGrid" type="GridContainer" parent="canvas" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -112.0
margin_right = 150.0
margin_bottom = -128.0
rect_min_size = Vector2( 140, 128 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
columns = 2
_sections_unfolded = [ "Margin", "Rect" ]

[node name="gradeSprite" type="Sprite" parent="." index="3"]

position = Vector2( -32, 124 )
_sections_unfolded = [ "Transform" ]

[node name="gradeTween" type="Tween" parent="." index="4"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0
_sections_unfolded = [ "playback" ]

[node name="totalTween" type="Tween" parent="." index="5"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[connection signal="tween_completed" from="gradeTween" to="." method="_on_gradeTween_tween_completed"]


